--- a/bin/decoder.cfg
+++ b/bin/decoder.cfg
@@ -11,14 +11,14 @@
 # Files
 ##########################################################################################
 #InputFile             = "vfile/bus_cavlc/bus_cavlc.264"       # H.264/AVC coded bitstream
-InputFile             = "vfile/sumsung_cabac/sumsung_720p_50M.264"       # H.264/AVC coded bitstream
+InputFile             = "vfile/Test.h264"       # H.264/AVC coded bitstream
 KeyFileDir            = "vfile/"			 # directory of the key file
 EnableKey			  = 1
 MultiThread			  = 0				#multi thread switch
 FileFormat            = 0               # NAL mode (0=Annex B, 1: RTP packets)
 DisplayDecParams      = 0               # 1: Display parameters; 
 Silent                = 1               # Silent decode
-FrameInterval		  = 0				# 间隔抽取
+IntervalFrame		  = 0				# 间隔抽取
 ##########################################################################################
 # MVC decoding parameters
 ##########################################################################################
